--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,8 @@
+body.dark-mode {
+  background-color: #333;
+  color: #fff;
+}
+
 .emoji-btn {
   text-align: center;
   cursor: pointer;
@@ -5,4 +10,8 @@
 
 .title {
   text-align: center;
+}
+
+.dark-mode-btn:hover {
+  cursor: pointer;
 }
