user posts successfully appear on page as intended on click

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,3 +15,13 @@ body.dark-mode {
 .dark-mode-btn:hover {
   cursor: pointer;
 }
+
+.user-post-card {
+  border: 2px solid whitesmoke;
+  border-radius: 4px;
+  padding: 1rem;
+}
+
+.post-emoji {
+  font-size: 3rem;
+}
