--- a/client/src/styles/utilities.css
+++ b/client/src/styles/utilities.css
@@ -7,3 +7,17 @@
 .border-blue {
   border: 3px solid blue;
 }
+.container {
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 1rem;
+  padding-left: 1rem;
+  max-width: 1200px;
+}
+.page-center {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
