--- a/client/src/styles/utilities.css
+++ b/client/src/styles/utilities.css
@@ -1,23 +1,32 @@
-.border-red {
-  border: 3px solid red;
-}
-.border-green {
-  border: 3px solid green;
-}
-.border-blue {
-  border: 3px solid blue;
-}
-.container {
-  width: 100%;
-  margin-right: auto;
-  margin-left: auto;
-  padding-right: 1rem;
-  padding-left: 1rem;
-  max-width: 1200px;
-}
-.page-center {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+@tailwind utilities;
+
+@layer utilities {
+  .border-red {
+    @apply border-2 border-red-600;
+  }
+  .border-green {
+    border: 3px solid green;
+  }
+  .border-blue {
+    border: 3px solid blue;
+  }
+  .container {
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 1rem;
+    padding-left: 1rem;
+    max-width: 1200px;
+  }
+  .page-center {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .flex-col-1 {
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+  }
 }
