--- a/client/src/styles/components.css
+++ b/client/src/styles/components.css
@@ -1,7 +1,7 @@
 @tailwind components;
 
 @layer components {
-  .btn {
-    @apply border;
+  #logo {
+    @apply text-[2rem] md:text-[3rem] font-[600] font-sacramento hover:text-black;
   }
 }
