--- a/client/src/styles/utilities.css
+++ b/client/src/styles/utilities.css
@@ -11,14 +11,9 @@
     @apply border-2 border-blue-600;
   }
   .page-center {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @apply h-screen flex justify-center items-center;
   }
   .flex-col-1 {
-    display: flex;
-    flex-direction: column;
-    row-gap: 1rem;
+    @apply flex flex-col gap-y-[1rem];
   }
 }
