--- a/client/src/styles/utilities.css
+++ b/client/src/styles/utilities.css
@@ -13,6 +13,9 @@
   .page-center {
     @apply h-screen flex justify-center items-center;
   }
+  .flex-col-03 {
+    @apply flex flex-col gap-y-[0.3rem];
+  }
   .flex-col-1 {
     @apply flex flex-col gap-y-[1rem];
   }
