--- a/client/src/styles/utilities.css
+++ b/client/src/styles/utilities.css
@@ -19,4 +19,13 @@
   .flex-col-1 {
     @apply flex flex-col gap-y-[1rem];
   }
+  .flex-col-2 {
+    @apply flex flex-col gap-y-[2rem];
+  }
+  .flex-col-3 {
+    @apply flex flex-col gap-y-[3rem];
+  }
+  .flex-col-4 {
+    @apply flex flex-col gap-y-[4rem];
+  }
 }
