--- a/client/src/styles/utilities.css
+++ b/client/src/styles/utilities.css
@@ -1,31 +1,42 @@
-@tailwind utilities;
+/* @import 'tailwindcss/utilities' layer(utilities); */
 
-@layer utilities {
-  .border-red {
-    @apply border-2 border-red-600;
-  }
-  .border-green {
-    @apply border-2 border-green-600;
-  }
-  .border-blue {
-    @apply border-2 border-blue-600;
-  }
-  .page-center {
-    @apply h-screen flex justify-center items-center;
-  }
-  .flex-col-03 {
-    @apply flex flex-col gap-y-[0.3rem];
-  }
-  .flex-col-1 {
-    @apply flex flex-col gap-y-[1rem];
-  }
-  .flex-col-2 {
-    @apply flex flex-col gap-y-[2rem];
-  }
-  .flex-col-3 {
-    @apply flex flex-col gap-y-[3rem];
-  }
-  .flex-col-4 {
-    @apply flex flex-col gap-y-[4rem];
-  }
+@utility border-red {
+  @apply border-2 border-red-600;
+}
+
+@utility border-green {
+  @apply border-2 border-green-600;
+}
+
+@utility border-blue {
+  @apply border-2 border-blue-600;
+}
+
+@utility page-center {
+  @apply h-screen flex justify-center items-center;
+}
+
+@utility flex-col-03 {
+  @apply flex flex-col gap-y-[0.3rem];
+}
+
+@utility flex-col-1 {
+  @apply flex flex-col gap-y-4;
+}
+
+@utility flex-col-2 {
+  @apply flex flex-col gap-y-8;
+}
+
+@utility flex-col-3 {
+  @apply flex flex-col gap-y-12;
+}
+
+@utility flex-col-4 {
+  @apply flex flex-col gap-y-16;
+}
+
+@utility container {
+  margin-inline: auto;
+  padding-inline: 1rem;
 }
