--- a/client/src/styles/fonts.css
+++ b/client/src/styles/fonts.css
@@ -1,11 +1,2 @@
-/* Sacramento */
-/* @import url('https://fonts.googleapis.com/css2?family=Sacramento&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Major+Mono+Display&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap'); */
-
-
+/* Major Mono Display, Montserrat */
 @import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
