--- a/client/src/styles/theme.css
+++ b/client/src/styles/theme.css
@@ -22,5 +22,5 @@
   /* Fonts */
   --font-primary: "Major Mono Display", monospace;
   --font-secondary: "Montserrat", sans-serif;
-  --font-tertiary: "Montserrat", sans-serif;
+  --font-tertiary: "IBM Plex Mono", monospace;
 }
