--- a/client/src/styles/theme.css
+++ b/client/src/styles/theme.css
@@ -18,6 +18,7 @@
   --color-deep-pink: #FF1493;
   --color-electric-violet: #8B00FF;
   --color-chartreuse: #7FFF00;
+  --color-bright-red: #FF0000;
 
   /* Fonts */
   --font-primary: "Major Mono Display", monospace;
