--- a/client/src/styles/components.css
+++ b/client/src/styles/components.css
@@ -1,4 +1,10 @@
+.btn {
+  @apply py-[0.5rem] px-[1rem] border-black border-[4px] transition-all-300;
+}
 
+.btn.red {
+  @apply bg-bright-red text-white hover:bg-white hover:text-bright-red;
+}
 
 .logo-text {
   @apply text-[2rem] font-medium font-primary no-underline text-yellow-400 flex flex-col [&_p]:leading-[50%];
