--- a/client/src/styles/components.css
+++ b/client/src/styles/components.css
@@ -7,7 +7,7 @@
 }
 
 .btn.green {
-  @apply bg-acid-green text-black hover:bg-black hover:text-acid-green;
+  @apply bg-chartreuse text-black hover:bg-black hover:text-chartreuse;
 }
 
 .btn.yellow {
@@ -59,5 +59,5 @@
 }
 
 .emoji-card.denary {
-  @apply bg-acid-green md:rotate-[2.5deg] md:hover:rotate-0;
+  @apply bg-chartreuse md:rotate-[2.5deg] md:hover:rotate-0;
 }
